--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -110,7 +110,8 @@
     "typescript": "^4.1.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "publishConfig": {
     "access": "public"
