--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -140,7 +140,7 @@
     "react-hotkeys-hook": "3.4.6",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-infinite-scroller": "1.2.6",
-    "react-intl": "^5.7.1",
+    "react-intl": "5.25.1",
     "react-phone-input-2": "^2.14.0",
     "react-progressive-image": "^0.6.0",
     "react-test-renderer": "^16.13.1",
