--- a/package.json
+++ b/package.json
@@ -57,6 +57,11 @@
   },
   "packageManager": "yarn@3.2.2",
   "resolutions": {
-    "npm": "latest-6"
+    "npm": "latest-6",
+    "@keystonejs/app-admin-ui/@types/react": "16.9.17",
+    "react-intl/@types/react": "16.9.17",
+    "@types/react-transition-group@npm:2.9.2/@types/react": "16.9.17",
+    "@types/react-infinite-scroller@npm:1.2.3/@types/react": "16.9.17",
+    "@types/hoist-non-react-statics@npm:3.3.1/@types/react": "16.9.17"
   }
 }
