--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -13,7 +13,7 @@
     "lodash": "^4.17.21",
     "next": "^9.5.5",
     "next-cookies": "^2.0.3",
-    "react-intl": "^5.7.1"
+    "react-intl": "5.25.1"
   },
   "exports": {
     "./*": "./*.jsx"
