--- a/packages/tsconfig/next-app.json
+++ b/packages/tsconfig/next-app.json
@@ -15,6 +15,7 @@
     "module": "esnext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "downlevelIteration": true
   }
 }
