--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -125,6 +125,7 @@
     "antd": "^4.24.3",
     "classnames": "^2.3.2",
     "react-markdown": "^6",
+    "rehype-prism-plus": "1.5.1",
     "remark-gfm": "^1"
   }
 }
