--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -22,8 +22,7 @@
   "license": "MIT",
   "scripts": {
     "import:figma": "find src/components -mindepth 1 -delete && ts-node bin/import/index.ts",
-    "build": "webpack --config webpack.config.js && tsc --project tsconfig.prod.json",
-    "prepack": "yarn install --mode update-lockfile && yarn build"
+    "build": "webpack --config webpack.config.js && tsc --project tsconfig.prod.json"
   },
   "files": [
     "dist"
