--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,8 +36,7 @@
     "build": "yarn build:deps && yarn build:tokens && yarn build:lib",
     "build:sb": "yarn build:deps && yarn build:tokens && build-storybook",
     "dev": "yarn build:deps && yarn build:tokens && start-storybook -p 6006",
-    "watch": "yarn build:deps && yarn build:tokens && webpack --config webpack.dev.js",
-    "prepack": "yarn install --mode update-lockfile && yarn build"
+    "watch": "yarn build:deps && yarn build:tokens && webpack --config webpack.dev.js"
   },
   "files": [
     "dist"
