--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "dev": "yarn build:deps && keystone dev --port 3001",
+    "dev": "yarn build:deps && node ./../../bin/keystone-dev.js",
     "debug": "node inspect node_modules/.bin/keystone dev --port 3001",
     "build:deps": "turbo build --filter=miniapp^... --filter=!condo",
     "build": "yarn build:deps && keystone build",
