--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@graphql-tools/graphql-file-loader": "^7.5.5",
+    "@graphql-tools/load": "^7.8.12",
     "@keystonejs/fields": "^22.1.3",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
