feat(condo): DOMA-5132 updated .helm and .env.example

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,10 @@ BANK_ACCOUNT_REQUEST_EMAIL_TARGET=help@doma.ai
 # real HMS push tokens for testing real push notification delivery to device, would be used only if provided
 # HCM_PUSH_TOKEN_TEST_RESIDENT=<TOKEN>
 # HCM_PUSH_TOKEN_TEST_MASTER=<TOKEN>
+
+#
+# APPLE_CONFIG_JSON='{"kid": <KEY_ID>, "iss": <ISSUER_ID>, "privateKey": "<PRIVATE_KEY>" }'
+
+# real Apple push tokens for testing real push notification delivery to device, would be used only if provided
+# APPLE_PUSH_TOKEN_TEST=<TOKEN>
+# APPLE_VOIP_PUSH_TOKEN_TEST=<TOKEN>
