feat: DOMA-5394 add prepare scripts and update getting-started.md

--- a/apps/address-service/package.json
+++ b/apps/address-service/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "test": "jest",
+    "prepare": "node ./bin/prepare.js",
     "dev": "node ./../../bin/keystone-dev.js",
     "debug": "node inspect node_modules/.bin/keystone dev",
     "build": "keystone build",
