--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "test": "mkdirp dist/admin && jest --unhandled-rejections=strict",
-    "dev": "yarn build:deps && node ./../../bin/keystone-dev.js",
+    "prepare": "node ./bin/prepare.js",
+    "dev": "yarn build:deps && node --trace-warnings ./../../bin/keystone-dev.js",
     "debug": "node inspect node_modules/.bin/keystone dev",
     "build:static": "yarn workspace @open-condo/ui build:sb -o ../../apps/condo/public/ui && mv -f public/ui/ui/* public/ui",
     "build:deps": "turbo build --filter=condo^...",
