chore: DOMA-5394 add default port 3000

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ REDIS_URL=redis://127.0.0.1:6379
 NODE_ENV=development
 DISABLE_LOGGING=true
 COOKIE_SECRET=random
+PORT=3000
 SERVER_URL=http://localhost:3000
 DEFAULT_LOCALE=ru
 FILE_FIELD_ADAPTER=local
