--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-intl/@types/react": "16.9.17",
     "@types/react-transition-group@npm:2.9.2/@types/react": "16.9.17",
     "@types/react-infinite-scroller@npm:1.2.3/@types/react": "16.9.17",
-    "@types/hoist-non-react-statics@npm:3.3.1/@types/react": "16.9.17"
+    "@types/hoist-non-react-statics@npm:3.3.1/@types/react": "16.9.17",
+    "es5-ext": "0.10.53"
   }
 }
