feat(condo): DOMA-5441 Merged billing and payments sections

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -58,6 +58,7 @@
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
     "@open-condo/featureflags": "workspace:^",
+    "@open-condo/icons": "workspace:^",
     "@open-condo/keystone": "workspace:^",
     "@open-condo/locales": "workspace:^",
     "@open-condo/next": "workspace:^",
