--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,5 @@ BANK_ACCOUNT_REQUEST_EMAIL_TARGET=help@doma.ai
 # real Apple push tokens for testing real push notification delivery to device, would be used only if provided
 # APPLE_PUSH_TOKEN_TEST=<TOKEN>
 # APPLE_VOIP_PUSH_TOKEN_TEST=<TOKEN>
+
+MOBILE_APP_IDS = { "resident": { "ios": "ai.doma.clients", "android": "ai.doma.client" }, "master": { "ios": "ai.doma.master", "android": "ai.doma.master" }}
