--- a/apps/address-service/package.json
+++ b/apps/address-service/package.json
@@ -41,6 +41,7 @@
     "@keystonejs/list-plugins": "^8.1.0",
     "@keystonejs/server-side-graphql-client": "^2.1.0",
     "@keystonejs/utils": "^6.1.0",
+    "@open-condo/cli": "workspace:^",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
     "@open-condo/keystone": "workspace:^",
