--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -56,6 +56,7 @@
     "@keystonejs/server-side-graphql-client": "^2.1.0",
     "@keystonejs/utils": "^6.1.0",
     "@open-condo/bridge": "workspace:^",
+    "@open-condo/cli": "workspace:^",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
     "@open-condo/featureflags": "workspace:^",
