--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -44,6 +44,7 @@
     "@keystonejs/utils": "^6.1.0",
     "@miniapp/domains": "link:./domains",
     "@open-condo/bridge": "workspace:^",
+    "@open-condo/cli": "workspace:^",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
     "@open-condo/keystone": "workspace:^",
