--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -52,6 +52,7 @@
     "graphql-tag": "^2.12.6",
     "ioredis": "^4.28.5",
     "lodash": "^4.17.21",
+    "lru-cache": "^7.18.3",
     "minimatch": "^5.1.1",
     "node-fetch": "^2.6.7",
     "ow": "^0.19.0",
