--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ FAKE_ADDRESS_SUGGESTIONS=true
 GOOGLE_RECAPTCHA_CONFIG='{"SITE_KEY":"6LcPRvQaAAAAAJRyxsFIB4rP5VH036pFOkNH8lgh", "SERVER_KEY":"6LcPRvQaAAAAADn_h1440Es7fXIGD0E4lpXR_FyF"}'
 HELP_REQUISITES='{ "support_email": "help@doma.ai", "support_email_mobile": "helpmobile@doma.ai", "bot_email": "service@doma.ai", "support_phone": "8 800 700-36-62" }'
 ENABLE_CACHE=1
-ADAPTER_CACHE_CONFIG = '{ "enable": true, "includeAllLists": true, "includedLists":[], "excludedLists":[], "logging":0 }'
+ADAPTER_CACHE_CONFIG = '{ "enabled": true, "excludedLists":[], "logging":0, "maxCacheSize":1000 }'
 #OIDC_CONDO_CLIENT_CONFIG='{"serverUrl":"http://localhost:3000", "clientId":"<client id>", "clientSecret":"<client secret>"}'
 
 # feature flags configuration
