--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -52,6 +52,7 @@
     "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
+    "ajv": "8.11.0",
     "antd": "^4.8.2",
     "classnames": "2.2.6",
     "dayjs": "^1.10.6",
