feat(condo): DOMA-5595 improve logging and refactor featureflags
* chore(keystone): DOMA-5593 add task results for local development

* refactor(global): DOMA-5595 refactor featureflags package

 - no useles redis logs
 - DX for local development

* fix(global): DOMA-5593 log fingerprint for admins

* fix(global): DOMA-5595 move all featureflags consts to constructor

* refactor(condo): DOMA-5595 use logging pattern inside SendMessageToSupportService

* feat(condo): DOMA-5595 add logging details for requests

* chore(condo): DOMA-5595 log every sendMessage

* refactor(condo): DOMA-5595 review fixes

* refactor(condo): DOMA-5595 small fixes

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,10 @@ REQUEST_CACHE_CONFIG = '{ "enabled": true, "logging":0, "logStatsEachSecs": 60 }
 
 #OIDC_CONDO_CLIENT_CONFIG='{"serverUrl":"http://localhost:3000", "clientId":"<client id>", "clientSecret":"<client secret>"}'
 
-# feature flags configuration
-FEATURE_FLAGS_CONFIG='["billing"]'
+# Feature flags configuration!
+# NOTE: you and use "url"+"apiKey" keys for remote api features or "static" key for const defined features
 FEATURE_TOGGLE_CONFIG='{"url": "http://localhost:3100/api/features", "apiKey": "key"}'
+FEATURE_TOGGLE_CONFIG='{"url":null,"apiKey":null,"static":{}}'
 
 BANK_ACCOUNT_REQUEST_EMAIL_TARGET=help@doma.ai
 
