--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/hoist-non-react-statics@npm:3.3.1/@types/react": "16.9.17",
     "es5-ext": "0.10.53",
     "debuglog": "1.0.1",
-    "debug": "4.3.4"
+    "debug": "4.3.4",
+    "knex": "0.95.15"
   }
 }
