--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -50,6 +50,7 @@
     "form-data": "^4.0.0",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.6",
+    "hot-shots": "^10.0.0",
     "ioredis": "^4.28.5",
     "lodash": "^4.17.21",
     "lru-cache": "^7.18.3",
