--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -107,9 +107,11 @@
     "graphql-voyager": "^1.0.0-rc.31",
     "html2canvas": "^1.0.0-rc.7",
     "http-proxy-middleware": "^2.0.6",
+    "iconv-lite": "^0.6.3",
     "immer": "9.0.13",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "jschardet": "^3.0.0",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.3.1",
     "jwt-decode": "3.1.2",
