--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -167,12 +167,12 @@
     "@graphql-codegen/cli": "1.21.8",
     "@testing-library/react": "^11.2.5",
     "@types/echarts": "4.9.16",
-    "@types/jest": "26.0.24",
+    "@types/jest": "^29.4.0",
     "@types/node": "^16",
     "@types/react": "16.9.17",
     "@types/react-infinite-scroller": "^1.2.3",
     "antd-dayjs-webpack-plugin": "^1.0.6",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.4.0",
     "cross-env": "^7.0.3",
     "css-loader": "1.0.1",
     "cypress": "10.11.0",
@@ -181,7 +181,9 @@
     "form-data": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-loader": "0.1.2",
-    "jest": "^26.6.3",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
+    "jest-jasmine2": "^29.4.0",
     "jest-watch-typeahead": "0.6.5",
     "less-loader": "^4.0.0",
     "mkdirp": "^1.0.4",
