--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -86,16 +86,18 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
-    "@types/jest": "26.0.24",
+    "@types/jest": "^29.4.0",
     "@types/node": "^16",
     "@types/react": "16.9.17",
     "antd-dayjs-webpack-plugin": "^1.0.6",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.4.0",
     "css-loader": "1.0.1",
     "extracted-loader": "^1.0.7",
     "identity-obj-proxy": "^3.0.0",
     "ignore-loader": "0.1.2",
-    "jest": "^26.6.3",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
+    "jest-jasmine2": "^29.4.0",
     "jest-watch-typeahead": "0.6.5",
     "less-loader": "^4.0.0",
     "pluralize": "^8.0.0",
