--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "7.0.4",
-    "jest": "^26.6.3",
-    "jest-diff": "^26.0.0",
+    "jest": "^29.4.0",
+    "jest-diff": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
+    "jest-jasmine2": "^29.4.0",
     "multi-semantic-release": "^3.0.1",
     "postcss-less": "^6.0.0",
     "semantic-release": "^19.0.5",
