--- a/packages/codegen/templates/app00/package.json
+++ b/packages/codegen/templates/app00/package.json
@@ -70,12 +70,14 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^29.4.0",
     "@types/node": "^16",
     "@types/react": "^17.0.1",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.4.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
+    "jest-jasmine2": "^29.4.0",
     "jest-watch-typeahead": "^0.6.1",
     "typescript": "^4.1.5"
   },
