--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -72,5 +72,8 @@
     "uuid": "^8.3.0",
     "validator": "^13.7.0"
   },
-  "repository": "https://github.com/open-condo-software/condo/tree/master/packages/keystone"
+  "repository": "https://github.com/open-condo-software/condo/tree/master/packages/keystone",
+  "devDependencies": {
+    "babel-jest": "^29.4.0"
+  }
 }
