--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -41,6 +41,8 @@
     "dayjs": "^1.11.6",
     "faker": "^6.6.6",
     "falsey": "^1.0.0",
-    "jest": "^26.6.3"
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
+    "jest-jasmine2": "^29.4.0"
   }
 }
