chore(condo) DOMA-6067: add variables to .env example
Signed-off-by: toplenboren <toplenboren@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ BANK_ACCOUNT_REQUEST_EMAIL_TARGET=help@doma.ai
 # APPLE_VOIP_PUSH_TOKEN_TEST=<TOKEN>
 
 MOBILE_APP_IDS = { "resident": { "ios": "ai.doma.clients", "android": "ai.doma.client" }, "master": { "ios": "ai.doma.master", "android": "ai.doma.master" }}
+
+DAILY_SAME_TICKET_LIMIT=2
+DAILY_TICKET_LIMIT=10
