refactor(condo): DOMA-5909 add prepareKeystone (#3197)

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,8 @@ PORT=3000
 SERVER_URL=http://localhost:3000
 DEFAULT_LOCALE=ru
 FILE_FIELD_ADAPTER=local
-FAKE_ADDRESS_SUGGESTIONS=true
 GOOGLE_RECAPTCHA_CONFIG='{"SITE_KEY":"6LcPRvQaAAAAAJRyxsFIB4rP5VH036pFOkNH8lgh", "SERVER_KEY":"6LcPRvQaAAAAADn_h1440Es7fXIGD0E4lpXR_FyF"}'
-HELP_REQUISITES='{ "support_email": "help@doma.ai", "support_email_mobile": "helpmobile@doma.ai", "bot_email": "service@doma.ai", "support_phone": "8 800 700-36-62" }'
+HELP_REQUISITES='{ "support_email": "help@example.com", "support_email_mobile": "helpmobile@example.com", "bot_email": "service@example.com", "support_phone": "+1 301 000-00-00" }'
 
 # Cache settings
 ADAPTER_CACHE_CONFIG = '{ "enabled": true, "excludedLists":[], "logging":0, "maxCacheSize":1000, "logStatsEachSecs": 60 }'
