--- a/package.json
+++ b/package.json
@@ -21,31 +21,34 @@
     "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/cli": "1.21.8",
     "@graphql-codegen/typescript": "1.23.0",
+    "@mono-pub/commit-analyzer": "^1.0.1",
+    "@mono-pub/git": "^1.0.1",
+    "@mono-pub/github": "^1.0.1",
+    "@mono-pub/npm": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-eslint": "^10.1.0",
-    "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^7.13.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "execa": "^5",
     "husky": "7.0.4",
     "jest": "^29.4.0",
     "jest-diff": "^29.4.0",
     "jest-environment-jsdom": "^29.4.0",
     "jest-jasmine2": "^29.4.0",
-    "multi-semantic-release": "^3.0.1",
+    "mono-pub": "^1.0.1",
     "postcss-less": "^6.0.0",
-    "semantic-release": "^19.0.5",
     "stylelint": "^14.11.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^28.0.0",
-    "turbo": "^1.9.0",
+    "turbo": "^1.9.8",
     "typescript": "^4.1.5"
   },
   "engines": {
-    "node": ">=14.19",
+    "node": ">=16.11",
     "yarn": ">=3.2.0"
   },
   "dependencies": {
