DOMA-6021 call records log (#3437)
* feat(condo): DOMA-6020 added CallRecord and CallRecortTicket schemas

* feat(condo): DOMA-6020 added ActiveCallContext and CondoWebSetActiveCall event

* feat(condo): DOMA-6020 added attachCallRecord checkbox to ticket form

* feat(condo): DOMA-6020 attach record to ticket

* feat(condo): DOMA-6020 rename CallRecordTicket to CallRecordFragment

* fix(telephony-integration): DOMA-6020 fix file attachment

* feat(condo): DOMA-6020 attach ticket organization

* feat(condo): DOMA-6020 added startedAt to CallRecordFragment

* feat(condo): DOMA-6020 added phone normalization to CallRecord

* feat(condo): DOMA-6020 added GQL errors to CallRecord schema

* fix(condo): DOMA-6020 fixes after review

* feat(condo): DOMA-6021 added TicketCallRecordHistory and AudioPlayer components

* feat(condo): DOMA-6021 call record page

* feat(condo): DOMA-6021 added links to phones and emails

* fix(condo): DOMA-6021 fixes after review

* fix(ui): DOMA-5702 made label ReactNode

* fix(condo): DOMA-6021 fixes after review

* fix(condo): DOMA-6021 async wavesurfer import

* fix(icons): DOMA-6021 fix phone icon

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -68,6 +68,7 @@
     "@open-condo/webhooks": "workspace:^",
     "@tinymce/tinymce-react": "^4.1.0",
     "@types/lodash": "4.14.186",
+    "@types/wavesurfer.js": "^6.0.6",
     "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
@@ -160,6 +161,7 @@
     "uuid": "^8.3.0",
     "validate.js": "^0.13.1",
     "validator": "^13.7.0",
+    "wavesurfer.js": "^6.6.3",
     "xlsx": "^0.17.0",
     "xss": "^1.0.13"
   },
