chore(global): bump @koa/cors@5 and socket.io@4 (#4644)
* chore(global): bump socket.io to 4.7.5

* chore(global): bump socket.io-client to 4.7.5

* chore(global): bump @koa/cors@5

--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "node-gyp/tar": "^6.2.1",
     "msgpackr": "^1.10.1",
     "browserify-sign": "^4.2.3",
-    "dd-trace@npm:1.5.1/import-in-the-middle": "^1.4.2"
+    "dd-trace@npm:1.5.1/import-in-the-middle": "^1.4.2",
+    "oidc-provider@npm:7.14.3/@koa/cors": "^5.0.0"
   }
 }
