--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,9 @@
-version: '3'
+version: '3.8'
+x-postgres-common:
+  &postgres-common
+  image: postgres:13.8
+  user: postgres
+
 services:
   app:
     image: app
@@ -15,16 +20,52 @@ services:
     networks:
       - app-network
   postgresdb:
-    image: postgres:13.2
-    command: postgres -c 'max_connections=2000'
+    <<: *postgres-common
     ports:
       - "127.0.0.1:5432:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: main
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_HOST_AUTH_METHOD: "scram-sha-256\nhost replication all 0.0.0.0/0 scram-sha-256"
+      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
+    command: |
+      postgres 
+        -c wal_level=replica
+        -c hot_standby=on
+        -c max_wal_senders=10
+        -c max_replication_slots=10
+        -c hot_standby_feedback=on
+    volumes:
+      - ./postgresql-init-replication.sql:/docker-entrypoint-initdb.d/postgresql-init-replication.sql
     networks:
       - app-network
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+  postgresdb-replica:
+    <<: *postgres-common
+    ports:
+      - "127.0.0.1:5433:5432"
+    environment:
+      PGUSER: replicator
+      PGPASSWORD: replicator_password
+    command: |
+      bash -c "
+      if [ ! -f /var/lib/postgresql/initialized ]; then
+        pg_basebackup --pgdata=/var/lib/postgresql/data -R --slot=replication_slot --host=postgresdb --port=5432
+        chmod -R 0700 /var/lib/postgresql/data
+        touch /var/lib/postgresql/initialized
+      fi
+      postgres -c max_connections=2000
+      "
+    networks:
+      - app-network
+    depends_on:
+      postgresdb:
+        condition: service_healthy
   redis:
     image: redis:6.2
     ports:
