--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "dd-trace@npm:1.5.1/import-in-the-middle": "^1.4.2",
     "oidc-provider@npm:7.14.3/@koa/cors": "^5.0.0",
     "luxon@>=1.0.0": "^1.28.1",
-    "luxon@^3.0.1": "3.0.1"
+    "luxon@^3.0.1": "3.0.1",
+    "decode-uri-component@^0.2.0": "^0.2.1"
   }
 }
