--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
     "oidc-provider@npm:7.14.3/@koa/cors": "^5.0.0",
     "luxon@>=1.0.0": "^1.28.1",
     "luxon@^3.0.1": "3.0.1",
-    "decode-uri-component@^0.2.0": "^0.2.1"
+    "decode-uri-component@^0.2.0": "^0.2.1",
+    "node-fetch@2.6.0": "^2.6.7",
+    "node-fetch@2.6.1": "^2.6.7"
   }
 }
