feature/condo/infra-200/sync-replication (#4698)
* feat(condo): INFRA-200: change async replication to sync

* fix(condo): INFRA-200: fix synchronous_standby_names

* feat(helm): INFRA-200: add sync replication

* fix(condo): INFRA-200 run postgres replica via compose inside cypress github action

* fix(helm): INFRA-200: fix submodule

---------

Co-authored-by: Sitnikov Ivan <sit7602@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,10 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_HOST_AUTH_METHOD: "scram-sha-256\nhost replication all 0.0.0.0/0 scram-sha-256"
       POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
-    command: |
-      postgres 
-        -c wal_level=replica
-        -c hot_standby=on
-        -c max_wal_senders=10
-        -c max_replication_slots=10
-        -c hot_standby_feedback=on
+      command: |
+        postgres
+           -c wal_level=replica
+           -c synchronous_commit=on
     volumes:
       - ./postgresql-init-replication.sql:/docker-entrypoint-initdb.d/postgresql-init-replication.sql
     networks:
