--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@open-condo/next",
-  "version": "1.0.0",
   "main": "./index.js",
+  "version": "1.0.0",
   "dependencies": {
     "@apollo/client": "3.3.20",
     "apollo-upload-client": "^14.1.3",
@@ -14,6 +14,9 @@
     "next": "^9.5.5",
     "next-cookies": "^2.0.3",
     "react-intl": "5.25.1"
+  },
+  "devDependencies": {
+    "@open-condo/tsconfig": "workspace:^"
   },
   "exports": {
     "./*": "./*.jsx"
