--- a/packages/featureflags/package.json
+++ b/packages/featureflags/package.json
@@ -2,12 +2,12 @@
   "name": "@open-condo/featureflags",
   "version": "1.0.0",
   "dependencies": {
-    "@growthbook/growthbook": "^0.18.1",
-    "@growthbook/growthbook-react": "^0.9.1",
+    "@growthbook/growthbook": "^1.0.1",
+    "@growthbook/growthbook-react": "^1.0.1",
     "@open-condo/config": "workspace:^",
     "@open-condo/keystone": "workspace:^",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.7"
+    "@open-condo/next": "workspace:^",
+    "express": "^4.17.1"
   },
   "peerDependencies": {
     "next": ">=9.5.5",
