feat(condo): DOMA-8799 background import meters processing implementation (#4827)
* feat(condo): DOMA-8799 add MeterImportTask model

* feat(condo): DOMA-8799 implement base success proceeding case

* feat(condo): DOMA-8799 background import meters processing implementation

* feat(condo): DOMA-8799 UI for background processing of meter reading files

* feat(condo): DOMA-8799 UI for background processing of meter reading files

* feat(condo): DOMA-8799 UI for background processing of meter reading files

* feat(condo): DOMA-8799 refactor code

* feat(condo): DOMA-8799 rename MeterImportTask to MeterReadingsImportTask

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 rename format options

* feat(condo): DOMA-8799 add getObjectStream util support of local file adapter (test cases)

* feat(condo): DOMA-8799 add getObjectStream util support of local file adapter (test cases)

* feat(condo): DOMA-8799 test runner explicit logs

* feat(condo): DOMA-8799 update migrations

* feat(condo): DOMA-8799 fix status calc logic

* feat(condo): DOMA-8799 fix status calc logic

--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -4,6 +4,7 @@
   "main": "./index.js",
   "exports": {
     "./fields": "./fields/index.js",
+    "./file": "./file/index.js",
     "./logging": "./logging/index.js",
     "./plugins": "./plugins/index.js",
     "./plugins/utils": "./plugins/utils/index.js",
