feat(condo): DOMA-9177 retention loops (#4842)
* feat(condo): DOMA-9177 retention loops

* feat(condo): DOMA-9177 added tags for email transport

* feat(condo): DOMA-9177 added tags for daily mails

* refactor(condo): DOMA-9177 move statistics logic to class

* refactor(condo): DOMA-9177 move added types

* fix(condo): DOMA-9177 removed broken import

* feat(condo): DOMA-9177 fixed bugs. Added feature flag. Some refactored

* refactor(condo): DOMA-9177 some refactored

* test(condo): DOMA-9177 added tests

* test(condo): DOMA-9177 added tests. Fixed bugs

* feat(condo): DOMA-9177 added logger. Added tests

* feat(condo): DOMA-9177 added cache

* feat(condo): DOMA-9177 added translations

* test(condo): DOMA-9177 updated tests

* fix(condo): DOMA-9177 fixed message delivery options

* feat(condo): DOMA-9177 added mjml for emails

* feat(condo): DOMA-9177 added mjml templates for daily mails

* feat(condo): DOMA-9177 update templates for daily mails

* feat(condo): DOMA-9177 update templates for daily mails

* feat(condo): DOMA-9177 update templates for daily mails. Added translations and links

* fix(condo): DOMA-9177 fixed templates

* fix(condo): DOMA-9177 fixed templates

* refactor(condo): DOMA-9177 refactored helper utils

* fix(condo): DOMA-9177 fixed support email

* feat(condo): DOMA-9177 added "landing_url" and "social_media_links" envs

* feat(condo): DOMA-9177 added a limit on sending messages for new organizations. Fixed handling of deleted organizations. Fixed sending empty data

* test(condo): DOMA-9177 added test for case if statistics is empty

* feat(condo): DOMA-9177 updated incidents to display in email

* feat(condo): DOMA-9177 added package "lru-cache"

* feat(condo): DOMA-9177 updated schema

* refactor(condo): DOMA-9177 removed comment

* refactor(condo): DOMA-9177 moved incident classifier ids to const

* refactor(condo): DOMA-9177 fixed calculation of number of addresses for inci

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -127,7 +127,9 @@
     "jwt-decode": "3.1.2",
     "less": "^3.12.2",
     "lodash": "^4.17.21",
+    "lru-cache": "^7.18.3",
     "minimatch": "^5.1.1",
+    "mjml": "^4.15.3",
     "nanoid": "^3.3.4",
     "next": "^9.5.5",
     "next-cookies": "^2.0.3",
@@ -182,6 +184,7 @@
     "@types/echarts": "4.9.16",
     "@types/jest": "^29.4.0",
     "@types/k6": "^0.49.0",
+    "@types/mjml": "^4.7.4",
     "@types/node": "^16",
     "@types/react": "16.9.17",
     "@types/react-infinite-scroller": "^1.2.3",
