--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 x-postgres-common:
   &postgres-common
-  image: postgres:13.8
+  image: ${REGISTRY}postgres:13.8
   user: postgres
 
 services:
@@ -77,7 +77,7 @@ services:
         condition: service_healthy
 
   redis:
-    image: redis:6.2
+    image: ${REGISTRY}redis:6.2
     ports:
       - "127.0.0.1:6379:6379"
     networks:
