--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -64,6 +64,7 @@
     "hot-shots": "^10.0.0",
     "inflection": "^1.13.1",
     "ioredis": "^4.28.5",
+    "knex": "^0.95.6",
     "lodash": "^4.17.21",
     "lru-cache": "^7.18.3",
     "minimatch": "^5.1.1",
