refactor(global): INFRA-155 rid off node env test usages (#4942)
* refactor(global): INFRA-155 completely remove all usages of node_env === test

* refactor(global): INFRA-155 completely remove all usages of node_env === test

* refactor(global): INFRA-155 remove local_env constant

* test(condo): INFRA-155 ticket classifier env usage

* chore(condo): INFRA-155 rebase with origin

* refactor(condo): INFRA-155 remove NODE_ENV=test setting at condo_domain_tests setup stage

* refactor(condo): INFRA-155 safely get prediction object at select

* refactor(global): INFRA-155 remove node_env code dependency at most of the apps

* fix(condo): INFRA-155 use single worker for test run

* fix(condo): INFRA-155 use single worker for test run

* fix(condo): INFRA-155 ticket test feature flag override

* fix(condo): INFRA-155 disable next app build during test runs

* refactor(global): INFRA-155 remove node env from package json scripts

* fix(condo): INFRA-155 disable next init at scripts & worker execution

* refactor(global): INFRA-155 update submodules

--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -13,7 +13,7 @@
     "kmigrator": "./../../bin/kmigrator.py",
     "makemigrations": "./../../bin/kmigrator.py makemigrations",
     "migrate": "./../../bin/kmigrator.py migrate",
-    "maketypes": "mkdir -p dist/admin && NODE_ENV=test node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
+    "maketypes": "mkdir -p dist/admin && node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
     "createschema": "./../../bin/createschema"
   },
   "dependencies": {
