--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -11,17 +11,17 @@
     "build:deps": "turbo build --filter=condo^...",
     "build": "yarn build:static && cross-env NODE_OPTIONS=\"--max_old_space_size=4096\" PHASE=build keystone build",
     "start": "NODE_ENV=production node ./../../bin/run-keystone-app.js",
-    "worker": "cross-env PHASE=worker node worker.js",
+    "worker": "cross-env PHASE=worker DISABLE_NEXT_APP=true node worker.js",
     "kmigrator": "./../../bin/kmigrator.py",
     "makemigrations": "./../../bin/kmigrator.py makemigrations",
     "migrate": "./../../bin/kmigrator.py migrate",
     "migrate:down": "./../../bin/kmigrator.py down",
     "migrate:unlock": "./../../bin/kmigrator.py unlock",
-    "maketypes": "mkdirp dist/admin && NODE_ENV=test node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
+    "maketypes": "mkdirp dist/admin && DISABLE_NEXT_APP=true node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
     "createservice": "node ./../../bin/createservice",
     "createschema": "node ./../../bin/createschema",
-    "lint-schema": "NODE_ENV=test node ./../../bin/lint-schema.js",
-    "lint-translations": "node ./../../bin/lint-i18n-translations.js"
+    "lint-schema": "DISABLE_NEXT_APP=true node ./../../bin/lint-schema.js",
+    "lint-translations": "DISABLE_NEXT_APP=true node ./../../bin/lint-i18n-translations.js"
   },
   "dependencies": {
     "@2gis/mapgl": "1.28.0",
