fix(condo): INFRA-155 rid off some unnecessary envs at test run (#4960)
* fix(condo): INFRA-155 rid off some unnecessary envs at test run & use start command for server

* fix(keystone): INFRA-155 move news env variables back

* fix(condo): INFRA-155 remove example token values from docstring

* refactor(condo): INFRA-155 move some envs to .env.example

* chore(condo): INFRA-155 disable semgrep check for test response script

* chore(condo): INFRA-155 swap disable_logging env variable to false by default

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DISABLE_LOGGING=true
+DISABLE_LOGGING=false
 DEFAULT_LOCALE=ru
 FILE_FIELD_ADAPTER=local
 HELP_REQUISITES='{ "support_email": "help@example.com", "support_email_mobile": "helpmobile@example.com", "bot_email": "service@example.com", "support_phone": "+1 301 000-00-00" }'
@@ -46,3 +46,8 @@ TELEGRAM_EMPLOYEE_BOT_TOKEN=telegram-token
 # HCAPTCHA_CONFIG='{"API_KEY":"<API_KEY>", "SITE_KEY":"<SITE_KEY>", "ANDROID_KEY":"<ANDROID_KEY>", "IOS_KEY":"<IOS_KEY>"}'
 # SETS_OF_SPECIFIC_REQUEST_HEADERS='{"SITE":[{ "<specific-header>":"some-value" }], "ANDROID_APP":[], "IOS_APP":[], }'
 DISABLE_CAPTCHA=true
+USE_LOCAL_FEATURE_FLAGS=true
+NOTIFICATION__SEND_ALL_MESSAGES_TO_CONSOLE=true
+NOTIFICATION__DISABLE_LOGGING=true
+TESTS_LOG_REQUEST_RESPONSE=true
+WORKER_CONCURRENCY=50
