refactor(condo): DOMA-9873 move file adapter to packages (#5060)
* refactor(condo): DOMA-9873 move file adapter to packages

* refactor(condo): DOMA-9873 update submodules

* refactor(condo): DOMA-9873 add new package to exports (within package.json)

--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -12,6 +12,7 @@
     "./preprocessors": "./preprocessors/index.js",
     "./rateLimiting": "./rateLimiting/index.js",
     "./sentry": "./sentry/index.js",
+    "./fileAdapter/": "./fileAdapter/",
     "./*": "./*.js"
   },
   "dependencies": {
