refactor(codegen): INFRA-316 update app00 template and add backend miniapp template (#4708)
* refactor(codegen): INFRA-219 base update app template

* refactor(codegen): INFRA-316 added backend app template

* refactor(codegen): INFRA-316 added nosonar comments

* fix(codegen): INFRA-316 update app types

* fix(codegen): INFRA-316 move generateCondoSchema to codegen package

* fix(codegen): INFRA-316 some fixes

* fix(codegen): INFRA-316 update components in template

* fix(codegen): INFRA-316 remove some redundant code, move generate.condo.server.utils to codegen

* fix(codegen): INFRA-316 update yarn.lock

* feat(condo): INFRA-316 added todo to move oidc logic to separate component

* feat(condo): INFRA-316 fix tests in template

* feat(condo): INFRA-316 fix tests in app01

* fix(codegen): INFRA-316 some fixes

* fix(codegen): INFRA-316 added info about prepare in README

* feat(codegen): INFRA-316 update oidc middleware in backend app

* feat(codegen): INFRA-316 use values for session headers from envs

* feat(codegen): INFRA-316 change start route of backend miniapp

--- a/packages/codegen/templates/app00/package.json
+++ b/packages/codegen/templates/app00/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "@app/{{ name }}",
+  "name": "@app/{{name}}",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "test": "jest",
-    "dev": "node --trace-warnings ./../../bin/run-keystone-app.js",
+    "prepare": "node ./bin/prepare.js",
+    "dev": "yarn build:deps && yarn dev:start",
+    "dev:start": "node --trace-warnings ./../../bin/run-keystone-app.js",
     "debug": "node inspect node_modules/.bin/keystone dev",
-    "build": "keystone build",
+    "build:deps": "turbo build --filter={{name}}^... --filter=!condo",
+    "build": "cross-env PHASE=build keystone build",
     "start": "NODE_ENV=production node ./../../bin/run-keystone-app.js",
+    "worker": "cross-env PHASE=worker node worker.js",
     "kmigrator": "./../../bin/kmigrator.py",
     "makemigrations": "./../../bin/kmigrator.py makemigrations",
     "migrate": "./../../bin/kmigrator.py migrate",
     "migrate:down": "./../../bin/kmigrator.py down",
-    "maketypes": "mkdir -p dist/admin && node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
+    "migrate:unlock": "./../../bin/kmigrator.py unlock",
+    "maketypes:{{name}}": "mkdir -p dist/admin && node ./../../bin/create-graphql-schema.js StitchSchemaMiddleware && graphql-codegen -c codegen.yaml",
+    "maketypes:condo": "node ./bin/generate-condo-schema.js && graphql-codegen -c condoCodegen.yaml",
+    "maketypes": "yarn maketypes:{{name}} && yarn maketypes:condo",
     "createschema": "./../../bin/createschema",
     "createservice": "node ./../../bin/createservice"
   },
   "dependencies": {
-    "@{{ name }}/domains": "link:./domains",
-    "@open-condo/codegen": "workspace:^",
+    "@apollo/client": "3.3.20",
+    "@app/condo": "workspace:^",
+    "@condo/domains": "link:../condo/domains",
+    "@emotion/babel-plugin": "^11.10.0",
+    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.10.0",
     "@keystonejs/adapter-knex": "^13.2.0",
     "@keystonejs/adapter-mongoose": "^11.2.0",
     "@keystonejs/adapter-prisma": "^3.2.0",
@@ -39,17 +51,27 @@
     "@keystonejs/list-plugins": "^8.1.0",
     "@keystonejs/server-side-graphql-client": "^2.1.0",
     "@keystonejs/utils": "^6.1.0",
+    "@open-condo/bridge": "workspace:^",
+    "@open-condo/codegen": "workspace:^",
+    "@open-condo/config": "workspace:^",
+    "@open-condo/keystone": "workspace:^",
+    "@open-condo/next": "workspace:^",
+    "@open-condo/ui": "workspace:^",
+    "@{{name}}/domains": "link:./domains",
     "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
+    "ajv": "8.11.0",
     "antd": "^4.24.12",
     "classnames": "2.2.6",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.10.6",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "express": "^4.17.1",
     "facepaint": "^1.2.1",
     "get-contrast": "^2.0.0",
+    "graphql-upload": "^15.0.1",
     "immer": "9.0.13",
     "less": "^3.12.2",
     "lodash": "^4.17.21",
@@ -64,6 +86,7 @@
     "react-markdown": "^4.3.1",
     "react-responsive": "^8.1.0",
     "react-test-renderer": "^16.13.1",
+    "tslib": "^2.5.3",
     "use-immer": "^0.4.1",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
@@ -72,14 +95,22 @@
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^29.4.0",
     "@types/node": "^16",
-    "@types/react": "^17.0.1",
+    "@types/react": "16.9.17",
+    "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-jest": "^29.7.0",
+    "css-loader": "1.0.1",
+    "extracted-loader": "^1.0.7",
     "identity-obj-proxy": "^3.0.0",
+    "ignore-loader": "0.1.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-jasmine2": "^29.7.0",
-    "jest-watch-typeahead": "^0.6.1",
-    "typescript": "^4.1.5"
+    "jest-watch-typeahead": "0.6.5",
+    "less-loader": "^4.0.0",
+    "pluralize": "^8.0.0",
+    "raw-loader": "^4.0.2",
+    "typescript": "^4.1.5",
+    "webpack": "^4.46.0"
   },
   "repository": "https://github.com/open-condo-software/condo/tree/main/apps/{{ name }}"
 }
