--- a/packages/codegen/templates/app00/tsconfig.json
+++ b/packages/codegen/templates/app00/tsconfig.json
@@ -1,4 +1,19 @@
 {
-  "schema": "https://json.schemastore.org/tsconfig",
-  "extends": "@open-condo/tsconfig/next-app.json"
+  "extends": "@open-condo/tsconfig/next-app.json",
+  "compilerOptions": {
+    "declaration": false,
+    "declarationMap": false,
+    "strict": false,
+    "incremental": false
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    ".next",
+    "out"
+  ]
 }
