--- a/apps/dev-portal/.env.example
+++ b/apps/dev-portal/.env.example
@@ -2,4 +2,4 @@ DOCS_ROOT_PATH='docs'
 DOCS_ENTRY_ENDPOINT='/docs/index'
 DOCS_REPO='https://github.com/open-condo-software/condo'
 DOCS_REPO_DOCS_ROOT='apps/dev-portal/docs'
-DOCS_EDIT_BRANCH='master'
+DOCS_EDIT_BRANCH='main'
