--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -210,6 +210,9 @@
     "typescript": "^4.1.5",
     "webpack": "^4.46.0"
   },
+  "peerDependencies": {
+    "dd-trace": "^4.46.0"
+  },
   "resolutions": {
     "@types/react": "16.9.17"
   }
