--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "bull": "^4.8.4",
     "bull-repl": "^0.27.2",
     "commitlint-plugin-function-rules": "^1.3.2",
-    "dd-trace": "4.46.0"
+    "dd-trace": "4.46.0",
+    "slugify": "^1.6.6"
   },
   "husky": {
     "hooks": {
