--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,8 +34,8 @@
     "build:tokens": "yarn build:styles && yarn build:colors",
     "build:lib": "webpack --config webpack.prod.js && tsc --project tsconfig.prod.json",
     "build": "yarn build:tokens && yarn build:lib",
-    "build:sb": "yarn build:deps && yarn build:tokens && build-storybook",
-    "dev": "yarn build:deps && yarn build:tokens && start-storybook -p 6006",
+    "build:sb": "yarn build:deps && yarn build:tokens && storybook build",
+    "dev": "yarn build:deps && yarn build:tokens && storybook dev -p 6006",
     "watch": "yarn build:deps && yarn build:tokens && webpack --config webpack.dev.js"
   },
   "files": [
@@ -75,17 +75,17 @@
     "@babel/preset-typescript": "^7.18.6",
     "@mdx-js/react": "^1.6.22",
     "@open-condo/tsconfig": "workspace:^",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-docs": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
+    "@storybook/addon-actions": "7.6.20",
+    "@storybook/addon-docs": "7.6.20",
+    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-interactions": "7.6.20",
+    "@storybook/addon-links": "7.6.20",
+    "@storybook/addons": "7.6.20",
+    "@storybook/cli": "7.6.20",
+    "@storybook/react": "7.6.20",
+    "@storybook/react-webpack5": "7.6.20",
     "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.16",
+    "@storybook/theming": "7.6.20",
     "@types/node": "^16",
     "@types/react": "16.9.17",
     "babel": "^6.23.0",
@@ -107,11 +107,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "source-map-loader": "^4.0.1",
+    "storybook": "7.6.20",
     "style-dictionary": "^3.9.2",
     "style-loader": "^3.3.1",
     "token-transformer": "^0.0.27",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.5.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
