hotfix(ci): DOMA-10206 change replication to remote_apply (#5221)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       command: |
         postgres
            -c wal_level=replica
-           -c synchronous_commit=on
+           -c synchronous_commit=remote_apply
     volumes:
       - ./docker-compose-postgresql-init-replication.sql:/docker-entrypoint-initdb.d/docker-compose-postgresql-init-replication.sql
     networks:
