--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -166,6 +166,7 @@
     "recheck": "^4.4.5",
     "redlock": "^5.0.0-beta.2",
     "serialize-error": "^8.1.0",
+    "slugify": "^1.6.6",
     "swr": "^1.3.0",
     "tslib": "^1.9.3",
     "unified": "^9",
