feat(global): apollo, miniapp utils and tracing ADRs 👣😎 (#5202)
* feat(miniapp-utils): INFRA-456 miniapp utils introduced 🤗

* feat(apollo): INFRA-456 apollo package introduced 🤗

* fix(global): INFRA-456 update contact info

* fix(global): INFRA-456 list helpers added

* feat(apollo): INFRA-456 apollo utils added

* fix(apollo): INFRA-456 fix typings

* feat(apollo): INFRA-456 main exports added

* feat(global): INFRA-456 build setup

* refactor(resident-app): INFRA-456 update ts

* fix(global): INFRA-456 fixed typings

* docs(miniapp-utils): INFRA-456 JSDocs added

* chore(dev-portal): INFRA-456 fix styling after antd update

* chore(global): INFRA-456 remove debug build

* docs(apollo): INFRA-456 added JSDoc

* chore(resident-app): INFRA-456 tmp commit

* chore(resident-app): INFRA-456 tmp commit

* refactor(resident-app): INFRA-456 hooks replaced

* refactor(resident-app): INFRA-456 extractor replaced

* refactor(resident-app): INFRA-456 persistor migrated

* refactor(resident-app): INFRA-456 list helper migrated

* refactor(resident-app): INFRA-456 migration finished

* fix(apollo): INFRA-456 fix esm module bundling

* feat(apollo): INFRA-456 compare caches by identity

* chore(apollo): INFRA-456 fixed addClientCache types

* chore(apollo): INFRA-456 fixed rollup scans

* fix(apollo): INFRA-456 fixed readPage length check

* fix(apollo): INFRA-456 fixed readPage length check

* feat(miniapp-utils): INFRA-456 apollo tracing middleware added

* feat(miniapp-utils): INFRA-456 apollo prepare context added

* feat(miniapp-utils): INFRA-456 apollo prepare context added

* feat(miniapp-utils): INFRA-456 added getClientSideFingerprint and getClientSideSenderInfo helpers

* docs(miniapp-utils): INFRA-456 readme finalized

* docs(miniapp-utils): INFRA-456 typos fixed

* docs(apollo): INFRA-456 readme drafted

* docs(apollo): INFRA-456 doc added

* docs(apollo): INFRA-456 docs finished

* chore(global

--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -14,7 +14,7 @@
   },
   "author": {
     "name": "Matthew Savelev",
-    "email": "msavelyev@doma.ai",
+    "email": "matthew@doma.ai",
     "url": "https://github.com/SavelevMatthew"
   },
   "license": "MIT",
