--- a/packages/bridge/package.json
+++ b/packages/bridge/package.json
@@ -15,7 +15,7 @@
   },
   "author": {
     "name": "Matthew Savelev",
-    "email": "msavelyev@doma.ai",
+    "email": "matthew@doma.ai",
     "url": "https://github.com/SavelevMatthew"
   },
   "license": "MIT",
