--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,7 @@
   },
   "author": {
     "name": "Matthew Savelev",
-    "email": "msavelyev@doma.ai",
+    "email": "matthew@doma.ai",
     "url": "https://github.com/SavelevMatthew"
   },
   "license": "MIT",
