--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -191,6 +191,7 @@
     "@types/react-infinite-scroller": "^1.2.3",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "bad-words-next": "^1.6.7",
     "commander": "^11.0.0",
     "cross-env": "^7.0.3",
