feat(global): INFRA-525 downgrade react to 16 for packages (#5259)

--- a/packages/apollo/package.json
+++ b/packages/apollo/package.json
@@ -65,11 +65,11 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/apollo-upload-client": "^17.0.0",
     "@types/lodash": "^4.17.7",
-    "@types/react": "18.0.27",
+    "@types/react": "^16.14.61",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.21.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
