--- a/packages/miniapp-utils/package.json
+++ b/packages/miniapp-utils/package.json
@@ -104,12 +104,12 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/react": "18.0.27",
+    "@types/react": "^16.14.61",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.3",
     "graphql": "^16.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.21.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
