chore(global): INFRA-533 bump @apollo/client to ^3.11.8 (#5276)
* chore(global): INFRA-533 bump @apollo/client to ^3.11.8

* chore(global): INFRA-533 updated yarn.lock

* chore(global): INFRA-533 updated submodules

* chore(global): INFRA-533 updated submodule to main

--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -16,7 +16,7 @@
     "./*": "./*.js"
   },
   "dependencies": {
-    "@apollo/client": "3.3.20",
+    "@apollo/client": "^3.11.8",
     "@keystonejs/adapter-knex": "^13.2.0",
     "@keystonejs/adapter-mongoose": "^11.2.0",
     "@keystonejs/adapter-prisma": "^3.2.0",
