--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -27,7 +27,7 @@
     "@2gis/mapgl": "1.28.0",
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.7.0",
-    "@apollo/client": "3.3.20",
+    "@apollo/client": "^3.11.8",
     "@condo/domains": "link:./domains",
     "@emotion/babel-plugin": "^11.10.0",
     "@emotion/core": "^10.1.1",
