--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -17,7 +17,7 @@
     "createschema": "./../../bin/createschema"
   },
   "dependencies": {
-    "@apollo/client": "3.3.20",
+    "@apollo/client": "^3.11.8",
     "@app/condo": "workspace:^",
     "@condo/domains": "link:../condo/domains",
     "@emotion/babel-plugin": "^11.10.0",
