--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "repository": "https://github.com/open-condo-software/condo/tree/main/packages/codegen",
     "dependencies": {
-        "@apollo/client": "3.3.20",
+        "@apollo/client": "^3.11.8",
         "@graphql-tools/graphql-file-loader": "^7.5.5",
         "@graphql-tools/load": "^8.0.0",
         "@graphql-typed-document-node/core": "^3.1.1",
