--- a/packages/codegen/templates/app00/package.json
+++ b/packages/codegen/templates/app00/package.json
@@ -24,7 +24,7 @@
     "createservice": "node ./../../bin/createservice"
   },
   "dependencies": {
-    "@apollo/client": "3.3.20",
+    "@apollo/client": "^3.11.8",
     "@app/condo": "workspace:^",
     "@condo/domains": "link:../condo/domains",
     "@emotion/babel-plugin": "^11.10.0",
