--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -3,7 +3,7 @@
   "main": "./index.js",
   "version": "1.0.0",
   "dependencies": {
-    "@apollo/client": "3.3.20",
+    "@apollo/client": "^3.11.8",
     "apollo-upload-client": "^14.1.3",
     "eventemitter3": "^4.0.0",
     "graphql": "^15.6.1",
