feat(condo): INFRA-517 added script for generating client utils (#5264)
* feat(condo): INFRA-517 bump @graphql-codegen/cli to v5

feat(condo): INFRA-517 added script to codegen

* feat(condo): INFRA-517 updated yarn.lock

* feat(condo): INFRA-517 added script for generate client utils

* feat(condo): INFRA-517 added example query

* refactor(condo): INFRA-517 some refactor

* chore(condo): INFRA-517 removed unused packages

* fix(condo): INFRA-517 updated config

* refactor(condo): INFRA-517 refactored imports

* refactor(condo): INFRA-517 some refactor. Added comment to generated file

* feat(condo): INFRA-517 added script for auto-updating utilities during development. Fixed deps. Some refactoring

* feat(condo): INFRA-517 added types:watch to dev script

* fix(condo): INFRA-517 fixed a app build

* feat(condo): INFRA-517 updated after rebase

* chore(condo): INFRA-517 updated schema.ts after rebase

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "mkdirp dist/admin && jest --unhandled-rejections=strict",
     "prepare": "node ./bin/prepare.js",
-    "dev": "yarn build:deps && node --trace-warnings ./../../bin/run-keystone-app.js",
+    "dev": "yarn build:deps && node --trace-warnings ./../../bin/run-keystone-app.js & yarn types:watch",
     "debug": "node inspect node_modules/.bin/keystone dev",
     "build:static": "yarn workspace @open-condo/ui build:sb -o ../../apps/condo/public/ui && mv -f public/ui/ui/* public/ui",
     "build:deps": "turbo build --filter=condo^...",
@@ -17,7 +17,8 @@
     "migrate": "./../../bin/kmigrator.py migrate",
     "migrate:down": "./../../bin/kmigrator.py down",
     "migrate:unlock": "./../../bin/kmigrator.py unlock",
-    "maketypes": "mkdirp dist/admin && DISABLE_NEXT_APP=true node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
+    "maketypes": "mkdirp dist/admin && DISABLE_NEXT_APP=true node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.ts",
+    "types:watch": "graphql-codegen -c codegen.ts --watch",
     "createservice": "node ./../../bin/createservice",
     "createschema": "node ./../../bin/createschema",
     "lint-schema": "DISABLE_NEXT_APP=true node ./../../bin/lint-schema.js",
@@ -180,7 +181,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "1.21.8",
+    "@graphql-codegen/add": "^5.0.3",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/import-types-preset": "^3.0.0",
+    "@graphql-codegen/typescript": "^4.0.9",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@parcel/watcher": "^2.4.1",
     "@testing-library/react": "^11.2.5",
     "@types/echarts": "4.9.16",
     "@types/jest": "^29.4.0",
@@ -197,6 +204,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "1.0.1",
     "cypress": "12.17.3",
+    "eslint": "^7.13.0",
     "extracted-loader": "^1.0.7",
     "form-data": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
